--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,39 @@
+# FastAPI Framework
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
 python-multipart==0.0.12
 pydantic==2.9.2
 pydantic-settings==2.6.0
+
+# Database
+sqlalchemy==2.0.30
+
+# Google Vision API for OCR and Image Search
+google-cloud-vision==3.7.2
+
+# Image Processing
+opencv-python==4.9.0.80
+numpy==1.26.4
+pillow==10.3.0
+
+# Invoice Generation
+reportlab==4.2.0
+openpyxl==3.1.2
+
+# PDF Processing
+PyPDF2==3.0.1
+pdf2image==1.17.0
+
+# Excel/CSV Processing
+pandas==2.2.2
+
+# Utilities
+python-dotenv==1.0.1
+requests==2.31.0
+
+# Image Similarity Search (for AI search)
+scikit-learn==1.4.2
+sentence-transformers==2.7.0
+
+# Date/Time
+python-dateutil==2.9.0.post0
