feat: Add invoice creation and detail dialogs, enhance invoice search with new filters, and improve PDF generation with Vietnamese font support and refined layout.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,15 @@
-# FastAPI Framework
+# Web Framework
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
 python-multipart==0.0.12
 pydantic==2.9.2
 pydantic-settings==2.6.0
+
+# GUI Framework (Streamlit - if needed)
+streamlit==1.51.0
+streamlit-autorefresh==1.0.1
+streamlit-searchbox==0.1.23
+streamlit-keyup==0.3.0
 
 # Database
 sqlalchemy==2.0.30
@@ -38,3 +44,4 @@ sentence-transformers==2.7.0
 
 # Date/Time
 python-dateutil==2.9.0.post0
+pytz==2024.1
