--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,3 +45,7 @@ sentence-transformers==2.7.0
 # Date/Time
 python-dateutil==2.9.0.post0
 pytz==2024.1
+
+# Search Enhancement
+unidecode==1.3.8  # Vietnamese diacritics normalization
+rapidfuzz==3.10.1  # Fast fuzzy string matching
