--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -46,6 +46,11 @@ sentence-transformers==2.7.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 
+# Security & Encryption
+cryptography>=41.0.0
+bcrypt>=4.0.0
+httpx>=0.27.0
+
 # Search Enhancement
 unidecode==1.3.8  # Vietnamese diacritics normalization
 rapidfuzz==3.10.1  # Fast fuzzy string matching
