feat: Implement AI-powered product import, allow nullable product prices, and add Grok 2 Vision model.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,10 @@ sqlalchemy==2.0.30
 # Google Vision API for OCR and Image Search
 google-cloud-vision==3.7.2
 
+# AI/LLM Providers for price list analysis
+openai>=1.0.0  # OpenAI GPT-4V
+google-generativeai>=0.8.0  # Google Gemini Vision
+
 # Image Processing
 opencv-python==4.9.0.80
 numpy==1.26.4
